[package]
name = "network"
version = "0.1.0"
edition = "2024"

[lints.clippy]
all = { level = "deny", priority = -1 }
arbitrary-source-item-ordering = "deny"
enum-glob-use = "allow"
float-cmp = "allow"
large_enum_variant = "allow"
missing-errors-doc = "allow"
missing-panics-doc = "allow"
must-use-candidate = "allow"
needless-pass-by-value = "allow"
pedantic = { level = "deny", priority = -1 }
result-large-err = "allow"
similar-names = "allow"
struct-field-names = "allow"
too-many-lines = "allow"
unused-async = "allow"
wildcard-imports = "allow"

[lints.rust]
mismatched-lifetime-syntaxes = "allow"
unreachable_pub = "deny"

[profile.release]
codegen-units = 1
lto = true

[dependencies]
ariadne = "0.6.0"
chumsky = "0.12.0"
